--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -14,9 +14,8 @@ h2 {
 /* ------------------------------------
    Navigation
 */
-/* Do this if you want to change the color of the navbar */
 .navbar.bg-dark {
-  background-color: black !important;
+  background-color: purple !important;
 }
 
 .navbar-dark .navbar-nav .nav-link {
